[package]
name = "webhookd"
version = "0.2.1"
authors = ["Jiajie Chen <jiegec@qq.com>"]
edition = "2018"
description = "GitLab/GitHub webhook daemon to run scripts on trigger"
repository = "https://github.com/jiegec/webhookd"
readme = "README.md"
keywords = ["webhook", "gitlab", "github"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-rt = "2.0.2"
env_logger = "0.8.3"
hex = "0.4.2"
log = "0.4.14"
ring = "0.16.20"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
structopt = "0.3.21"
toml = "0.5.8"
tempfile = "3.3.0"

[package.metadata.deb]
name = "webhookd"
assets = [
        ["target/release/webhookd", "usr/bin/webhookd", "755"],
        ["webhookd.service", "lib/systemd/system/", "644"]
]
section = "web"
