[package]
name = "webhookd"
version = "0.2.2"
authors = ["Jiajie Chen <jiegec@qq.com>"]
edition = "2018"
description = "GitLab/GitHub webhook daemon to run scripts on trigger"
repository = "https://github.com/jiegec/webhookd"
readme = "README.md"
keywords = ["webhook", "gitlab", "github"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-rt = "2.9.0"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.20"
ring = "0.17.2"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
toml = "0.5.8"
tempfile = "3.8.0"

[package.metadata.deb]
name = "webhookd"
assets = [
        ["target/release/webhookd", "usr/bin/webhookd", "755"],
        ["webhookd.service", "lib/systemd/system/", "644"]
]
section = "web"
