[package]
name = "webhookd"
version = "0.2.2"
authors = ["Jiajie Chen <jiegec@qq.com>"]
edition = "2021"
description = "GitLab/GitHub webhook daemon to run scripts on trigger"
repository = "https://github.com/jiegec/webhookd"
readme = "README.md"
keywords = ["webhook", "gitlab", "github"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-rt = "2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
log = "0.4"
ring = "0.17"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
tempfile = "3"

[profile.release]
debug = "line-tables-only"

[package.metadata.deb]
name = "webhookd"
assets = [
        ["target/release/webhookd", "usr/bin/webhookd", "755"],
        ["webhookd.service", "lib/systemd/system/", "644"]
]
section = "web"
